updated readme and values.yaml

--- a/terraform/jenkins/values.yaml
+++ b/terraform/jenkins/values.yaml
@@ -360,7 +360,7 @@ master:
           - script: >
               folder('testjobs')
           - script: >
-              pipelineJob('Mendixtestjob/jenkins-agent') {
+              pipelineJob('testjobs/default-agent') {
                 definition {
                   cps {
                     script("""\
